[package]
name        = "stored"
description = "Store*d* (pronounced store-daemon, or just stored) is a distributed immutable blob store. Stored is not a key-value store, as the key isn't the decided by the user but by the SHA-512 checksum of the stored blob."
version     = "0.2.0-dev"
publish     = false # In development.
authors     = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
license     = "MIT"
repository  = "https://github.com/Thomasdezeeuw/stored"
readme      = "README.md"
edition     = "2021"

[dependencies]
# TODO: replace with published crates.
left-right        = { git = "https://github.com/Thomasdezeeuw/left-right", rev = "793295e202919def4666acf04ee9d42aeaba21a7", default-features = false }
heph              = { git = "https://github.com/Thomasdezeeuw/heph", rev = "9aa893cc1089124b515b27a910303e60d1ba8960", default-features = false }
heph-rt           = { git = "https://github.com/Thomasdezeeuw/heph", rev = "9aa893cc1089124b515b27a910303e60d1ba8960", default-features = false }
heph-http         = { git = "https://github.com/Thomasdezeeuw/heph", rev = "9aa893cc1089124b515b27a910303e60d1ba8960", default-features = false }
itoa              = { version = "1.0.4", default-features = false }
libc              = { version = "0.2.151", default-features = false }
log               = { version = "0.4.17", default-features = false, features = ["kv_unstable_std", "release_max_level_info"] }
ring              = { version = "0.17", default-features = false }
std-logger        = { version = "0.5", default-features = false, features = ["timestamp", "log-panic", "nightly"] }

[dev-dependencies]
http        = { version = "0.2.1", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
mio         = { version = "0.8.0", default-features = false, features = ["os-poll"] }
mio-pipe    = { version = "0.1.1", default-features = false }
serde_test  = { version = "1.0.116", default-features = false }

[profile.release]
opt-level        = 3
debug            = false
debug-assertions = false
overflow-checks  = false
lto              = "fat"
panic            = "unwind"
incremental      = false
codegen-units    = 1
rpath            = false

[[bin]]
name = "stored"
path = "src/bin/server.rs"

[workspace]
members = ["bench/hashmap_hash"]
