[package]
name        = "stored"
description = "Store*d* (pronounced store-daemon, or just stored) is a distributed immutable blob store. Stored is not a key-value store, as the key isn't the decided by the user but by the SHA-512 checksum of the stored blob."
version     = "0.2.0-dev"
publish     = false # In development.
authors     = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
license     = "MIT"
repository  = "https://github.com/Thomasdezeeuw/stored"
readme      = "README.md"
edition     = "2021"

[dependencies]
basic-toml        = { version = "0.1.9", default-features = false }
# TODO: replace with published crates.
left-right        = { git = "https://github.com/Thomasdezeeuw/left-right", rev = "4408ba0bb23ea0090b420ebfc0561780a44c533f", default-features = false }
heph              = { git = "https://github.com/Thomasdezeeuw/heph", rev = "94a3bd71a74d7ff049f46e01f5cb1f7985d49e71", default-features = false }
heph-rt           = { git = "https://github.com/Thomasdezeeuw/heph", rev = "94a3bd71a74d7ff049f46e01f5cb1f7985d49e71", default-features = false }
heph-http         = { git = "https://github.com/Thomasdezeeuw/heph", rev = "94a3bd71a74d7ff049f46e01f5cb1f7985d49e71", default-features = false }
itoa              = { version = "1.0.4", default-features = false }
libc              = { version = "0.2.151", default-features = false }
log               = { version = "0.4.21", default-features = false, features = ["kv_std", "release_max_level_info"] }
ring              = { version = "0.17", default-features = false }
serde             = { version = "1.0.197", default-features = false }
std-logger        = { version = "0.5.3", default-features = false, features = ["timestamp", "log-panic", "nightly"] }

[profile.release]
opt-level        = 3
debug            = false
debug-assertions = false
overflow-checks  = false
lto              = "fat"
panic            = "unwind"
incremental      = false
codegen-units    = 1
rpath            = false

[[bin]]
name = "stored"
path = "src/bin/server.rs"

[workspace]
members = ["bench/hashmap_hash"]
