[package]
name = "coeus-cli"
version = "0.1.0"
authors = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
edition = "2018"

[dependencies]
futures-io-preview   = "0.3.0-alpha.17"
futures-util-preview = "0.3.0-alpha.17"
log                  = "0.4.6"
std-logger           = "0.3.2"

coeus                = { path = "../client" }
