[package]
name = "coeus-server"
version = "0.1.0"
authors = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
evmap           = "6.0.0"
futures-preview = { version = "0.3.0-alpha.17", features = ["nightly", "std", "async-await"] }
heph            = { path = "../../heph" }
log             = "0.4.6"

coeus-common    = { path = "../common" }
