[package]
name = "coeus-tests"
version = "0.1.0"
authors = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
edition = "2018"

[dev-dependencies]
coeus = { path = "../client" }
futures-io-preview = "0.3.0-alpha.16"
futures-test-preview = "0.3.0-alpha.16"

[[test]]
name = "end_to_end"
path = "end_to_end.rs"
